--- a/tex/progress.tex
+++ b/tex/progress.tex
@@ -147,7 +147,7 @@ Progress: Finished 2010 to 2019.
         2017 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
         2018 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
         2019 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A \\
-        2020 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
+        2020 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A \\
         2021 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
         2022 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
         2023 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
