update structure and progress for 2024 paper.

--- a/tex/2024.tex
+++ b/tex/2024.tex
@@ -1,3 +1,3 @@
 \Year{\currfilebase}
 \input{\currfiledir\currfilebase/2}
-\input{\currfiledir\currfilebase/3}
+% \input{\currfiledir\currfilebase/3}
