--- a/main.tex
+++ b/main.tex
@@ -37,5 +37,5 @@
 % \include{\TexPath/2021}
 % \include{\TexPath/2022}
 % \include{\TexPath/2023}
-% \include{\TexPath/2024}
+\include{\TexPath/2024}
 \end{document}
