--- a/tex/2024/2/2.tex
+++ b/tex/2024/2/2.tex
@@ -1,2 +1,118 @@
 \Question{\currfilebase}
-\WorkInProgress
+\begin{enumerate}
+    \item By Newton's binomial theorem, we have
+          \begin{align*}
+              (8 + x^3)^{-1} & = \frac{1}{8} \left(1 + \left(\frac{x}{2}\right)^3\right)^{-1}            \\
+                             & = \frac{1}{8} \sum_{k = 0}^{\infty} (-1)^k \left(\frac{x}{2}\right)^{3k},
+          \end{align*}
+          and this is valid for
+          \[
+              \abs*{\frac{x}{2}} < 1, \abs*{x} < 2,
+          \]
+          as desired.
+
+          Hence,
+          \begin{align*}
+              \int_{0}^{1} \frac{x^m}{8 + x^3} \Diff x & = \int_{0}^{1} \frac{1}{8} \sum_{k = 0}^{\infty} (-1)^k \left(\frac{x}{2}\right)^{3k} x^m \Diff x          \\
+                                                       & = \frac{1}{8} \sum_{k = 0}^{\infty} \frac{(-1)^k}{2^{3k}} \int_{0}^{1} x^{3k + m} \Diff x                  \\
+                                                       & = \sum_{k = 0}^{\infty} \frac{(-1)^k}{2^{3(k + 1)}} \left[\frac{x^{3k + m + 1}}{3k + m + 1}\right]_{0}^{1} \\
+                                                       & = \sum_{k = 0}^{\infty} \left(\frac{(-1)^k}{2^{3(k + 1)}} \cdot \frac{1}{3k + m + 1}\right),
+          \end{align*}
+          as desired.
+
+    \item Let \(m = 2\), and we have
+          \[
+              \int_{0}^{1} \frac{x^2}{8 + x^3} \Diff x = \sum_{k = 0}^{\infty} \left(\frac{(-1)^k}{2^{3(k + 1)}} \cdot \frac{1}{3k + 3}\right).
+          \]
+
+          Let \(m = 1\), and we have
+          \[
+              \int_{0}^{1} \frac{x}{8 + x^3} \Diff x = \sum_{k = 0}^{\infty} \left(\frac{(-1)^k}{2^{3(k + 1)}} \cdot \frac{1}{3k + 2}\right).
+          \]
+
+
+          Let \(m = 0\), and we have
+          \[
+              \int_{0}^{1} \frac{x}{8 + x^3} \Diff x = \sum_{k = 0}^{\infty} \left(\frac{(-1)^k}{2^{3(k + 1)}} \cdot \frac{1}{3k + 1}\right).
+          \]
+
+          Hence,
+          \begin{align*}
+              \sum_{k = 0}^{\infty} \frac{(-1)^k}{2^{3(k + 1)}} \left(\frac{1}{3k + 3} - \frac{2}{3k + 2} + \frac{4}{3k + 1}\right) & = \int_{0}^{1} \frac{x^2}{8 + x^3} \Diff x - 2 \int_{0}^{1} \frac{x}{8 + x^3} \Diff x + 4 \int_{0}^{1} \frac{\Diff x}{8 + x^3} \\
+                                                                                                                                    & = \int_{0}^{1} \frac{x^2 - 2x + 4}{8 + x^3} \Diff x                                                                            \\
+                                                                                                                                    & = \int_{0}^{1} \frac{x^2 - 2x + 4}{(x + 2)(x^2 - 2x + 4)} \Diff x                                                              \\
+                                                                                                                                    & = \int_{0}^{1} \frac{\Diff x}{x + 2}                                                                                           \\
+                                                                                                                                    & = \left[\ln \abs*{x + 2}\right]_{0}^{1}                                                                                        \\
+                                                                                                                                    & = \ln 3 - \ln 2.
+          \end{align*}
+
+    \item Using partial fractions, let \(A'\) and \(B'\) be real constants such that
+          \begin{align*}
+              \frac{72(2k + 1)}{(3k + 1)(3k + 2)} & = \frac{A'}{3k + 1} + \frac{B'}{3k + 2}               \\
+                                                  & = \frac{3(A' + B')k + (2A' + B')}{(3k + 1) (3k + 2)}.
+          \end{align*}
+
+          Hence, we have
+          \[
+              \left\{\begin{aligned}
+                  3(A' + B') & = 72 \cdot 2 = 144, \\
+                  2A' + B'   & = 72.
+              \end{aligned}\right.
+          \]
+
+          Therefore, \((A', B') = (24, 24)\).
+
+          Let
+          \[
+              A = \int_{0}^{1} \frac{\Diff x}{8 + x^3}, B = \int_{0}^{1} \frac{x \Diff x}{8 + x^3}, C = \int_{0}^{1} \frac{x^2 \Diff x}{8 + x^3},
+          \]
+          and what is desired is \(24(A + B)\).
+
+          From the previous part, we can see that \(4A - 2B + C = \ln 3 - \ln 2\).
+
+          Also,
+          \begin{align*}
+              2A + B & = \int_{0}^{1} \frac{(2 + x) \Diff x}{8 + x^3}                                                \\
+                     & = \int_{0}^{1} \frac{\Diff x}{x^2 - 2x + 4}                                                   \\
+                     & = \int_{0}^{1} \frac{\Diff x}{(x - 1)^2 + 3}                                                  \\
+                     & = \frac{1}{\sqrt{3}} \left[\arctan\left(\frac{x - 1}{\sqrt{3}}\right)\right]_{0}^{1}          \\
+                     & = \frac{1}{\sqrt{3}} \cdot \left[\arctan 0 - \arctan \left(- \frac{1}{\sqrt{3}}\right)\right] \\
+                     & = \frac{1}{\sqrt{3}} \cdot \frac{\pi}{6}                                                      \\
+                     & = \frac{\pi}{6\sqrt{3}}.
+          \end{align*}
+
+          We also have
+          \begin{align*}
+              C & = \int_{0}^{1} \frac{x^2 \Diff x}{8 + x^3}       \\
+                & = \frac{1}{3} \left[\ln (8 + x^3)\right]_{0}^{1} \\
+                & = \frac{1}{3} \left[\ln 9 - \ln 8\right]         \\
+                & = \frac{2}{3} \ln 3 - \ln 2.
+          \end{align*}
+
+          Hence, we have
+          \[
+              4A - 2B = \ln 3 - \ln 2 - \frac{2}{3} \ln 3 + \ln 2 = \frac{1}{3} \ln 3,
+          \]
+          and hence \(2A - B = \frac{1}{6} \ln 3\).
+
+          Therefore,
+          \[
+              4A = \frac{1}{6} \ln 3 + \frac{\pi}{6\sqrt{3}},
+          \]
+          and hence
+          \[
+              A = \frac{\ln 3}{24} + \frac{\pi}{24\sqrt{3}}.
+          \]
+
+          Subtracting two of this from \(2A + B\) gives
+          \[
+              B = \frac{\pi}{6 \sqrt{3}} - \frac{\ln 3}{12} - \frac{\pi}{12 \sqrt{3}} = \frac{\pi}{12\sqrt{3}} - \frac{\ln 3}{12},
+          \]
+          and hence what is desired is
+          \begin{align*}
+              24(A + B) & = 24 \left(\frac{\pi}{24 \sqrt{3}} + \frac{\pi}{12 \sqrt{3}} + \frac{\ln 3}{24} - \frac{\ln 3}{12}\right) \\
+                        & = 24 \left(\frac{\pi}{8 \sqrt{3}} - \frac{\ln 3}{24}\right)                                               \\
+                        & = \pi \sqrt{3} - \ln 3,
+          \end{align*}
+          which gives \(a = 3, b = 3\).
+\end{enumerate}
