define new commands.

--- a/macros.tex
+++ b/macros.tex
@@ -71,6 +71,7 @@
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\ang}{\langle}{\rangle}
 
 % Vectors
 \newcommand{\vect}[1]{\mathbf{#1}}
@@ -87,10 +88,16 @@
 \newcommand{\jhat}{\textbf{\^{ȷ}}}
 \newcommand{\khat}{\vect{\hat{k}}}
 
+% Other Functions
+\DeclareMathOperator{\sgn}{sgn}
+
 % Other Math Symbols
 \DeclareMathOperator{\modulo}{mod}
 
 \newcommand{\divides}{\mid}
 \newcommand{\notdivides}{\nmid}
+
 \newcommand{\LHS}{\text{LHS}}
 \newcommand{\RHS}{\text{RHS}}
+
+\newcommand{\degree}{^{\circ}}
