--- a/tex/2024/2/8.tex
+++ b/tex/2024/2/8.tex
@@ -1,2 +1,143 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item Notice that by expanding this square,
+          \begin{align*}
+              \left(\sqrt{x_n} - \sqrt{y_n}\right)^2 & = x_n + y_n - 2 \sqrt{x_n y_n}  \\
+                                                     & = 2 a(x_n, y_n) - 2 g(x_n, y_n) \\
+                                                     & = 2 (x_{n + 1} - y_{n + 1}).
+          \end{align*}
+
+          Since this is a square, it must be non-negative, with the equal sign taking if and only if \(\sqrt{x_n} = \sqrt{y_n}\), which holds if and only if \(x_n = y_n\).
+
+          So \(x_{n + 1} \geq y_{n + 1}\), and \(x_{n + 1} = y_{n + 1}\) if and only if \(x_n = y_n\).
+
+          Since \(y_0 < x_0\), we have \(y_0 \neq x_0\), and hence \(y_1 \neq x_1\). By induction, this shows that \(y_n \neq _n\) for all \(n\), and hence for all \(n \geq 0\), \(y_n < x_n\).
+
+          Furthermore,
+          \begin{align*}
+              x_n - x_{n + 1} & = x_n - a(x_n, y_n)         \\
+                              & = x_n - \frac{x_n + y_n}{2} \\
+                              & = \frac{x_n - y_n}{2}       \\
+                              & > 0,
+          \end{align*}
+          since \(x_n > y_n\) and hence \(x_n > x_{n + 1}\).
+
+          Similarly,
+          \begin{align*}
+              y_{n + 1} - y_n & = g(x_n, y_n) - y_N                    \\
+                              & = \sqrt{x_n y_n} - y_N                 \\
+                              & = \sqrt{y_n} (\sqrt{x_n} - \sqrt{y_n}) \\
+                              & > 0,
+          \end{align*}
+          since \(x_n > y_n\) implies \(\sqrt{x_n} > \sqrt{y_n}\), and hence \(y_n < y_{n + 1}\).
+
+          Hence, for all \(n \in \NN\),
+          \[
+              y_n < x_n < x_{n - 1} < x_{n - 2} < \cdots < x_0,
+          \]
+          and \(y_{n + 1} > y_n\).
+
+          Hence, \(\{y_N\}_{n = 0}^\infty\) is an increasing sequence, and is bounded above by \(x_0\).
+
+          So there exists \(M \in \RR\) such that
+          \[
+              \lim_{n \to \infty} y_n = M.
+          \]
+
+          As for the inequality, the left inequality sign is equivalent to \(y_{n + 1} < x_{n + 1}\) which was shown above.
+
+          To show the right inequality sign, this is equivalent to showing
+          \begin{align*}
+              \frac{1}{2} (\sqrt{x_n} - \sqrt{y_n})^2 & < \frac{1}{2} (x_n - y_n) \\
+              x_n + y_n - 2 \sqrt{x_n y_N}            & < x_n - y_n               \\
+              2 y_n                                   & < 2 \sqrt{x_n y_n}        \\
+              \sqrt{y_n}                              & < \sqrt{x_n},
+          \end{align*}
+          which is true since \(y_n < x_n\).
+
+          Hence,
+          \[
+              0 < x_{n + 1} - y_{n + 1} < \frac{1}{2} (x_n - y_n)
+          \]
+          as desired.
+
+          Hence, we have
+          \begin{align*}
+              0 & < x_n - y_n                           \\
+                & < \frac{1}{2} (x_{n - 1} - y_{n - 1}) \\
+                & < \frac{1}{4} (x_{n - 2} - y_{n - 2}) \\
+                & < \cdots                              \\
+                & < \frac{1}{2^n} (x_0 - y_0),
+          \end{align*}
+          by induction.
+
+          \(x_0 - y_0 > 0\) is a positive real constant. Let \(n \to \infty\), and by the squeeze theorem, the strict inequalities become weak, and
+          \[
+              0 \leq \lim_{n \to \infty} (x_n - y_n) \leq \lim_{n \to \infty} \left(\frac{1}{2^n} (x_0 - y_0)\right) = 0,
+          \]
+          and hence
+          \[
+              \lim_{n \to \infty} (x_n - y_n) = 0.
+          \]
+
+          Therefore,
+          \begin{align*}
+              \lim_{n \to \infty} x_n & = \lim_{n \to \infty} \left[(x_n - y_n) + y_n\right]        \\
+                                      & = \lim_{n \to \infty} (x_n - y_n) + \lim_{n \to \infty} y_n \\
+                                      & = 0 + M                                                     \\
+                                      & = M,
+          \end{align*}
+          since both parts of the limit \(x_n - y_n\) and \(y_n\) exist, the limit of the sum is the sum of the limits of the individual parts.
+
+    \item Using this substitution, when \(x \to 0^{+}\), we have \(t \to -\infty\), and when \(x \to +\infty\), \(t \to +\infty\). Also,
+          \[
+              \DiffFrac{t}{x} = \frac{1}{2} + \frac{1}{2} \cdot \frac{pq}{x^2} = \frac{1}{2} \left(1 + \frac{pq}{x^2}\right).
+          \]
+
+          Hence, the integral can be simplified as
+          \begin{align*}
+               & \phantom{=} \int_{-\infty}^{\infty} \frac{\Diff t}{\sqrt{\left(\frac{1}{4} (p + q)^2 + t^2\right) \left(pq + t^2\right)}}                                                                                                             \\
+               & = \int_{0}^{\infty} \frac{\frac{1}{2} \left(1 + \frac{pq}{x^2}\right) \Diff x}{\sqrt{\left(\frac{1}{4} (p + q)^2 + \frac{1}{4} \left(x - \frac{pq}{x}\right)^2\right) \left(pq + \frac{1}{4} \left(x - \frac{pq}{x}\right)^2\right)}} \\
+               & = \int_{0}^{\infty} \frac{\frac{1}{2} \left(1 + \frac{pq}{x^2}\right) \Diff x}{\frac{1}{4} \sqrt{\left(p^2 + 2pq + q^2 + x^2 - 2pq + \frac{p^2 q^2}{x^2}\right) \left(4pq + x^2 - 2pq + \frac{p^2 q^2}{x^2}\right)}}                  \\
+               & = 2 \int_{0}^{\infty} \frac{\left(1 + \frac{pq}{x^2}\right) \Diff x}{\sqrt{\left(p^2 + q^2 + x^2 + \frac{p^2 q^2}{x^2}\right) \left(x^2 + 2pq + \frac{p^2 q^2}{x^2}\right)}}                                                          \\
+               & = 2 \int_{0}^{\infty} \frac{(x^2 + pq) \Diff x}{\sqrt{\left(x^4 + (p^2 + q^2) x^2 + p^2 q^2\right)\left(x^4 + 2pq x^2 + p^2 q^2\right)}}                                                                                              \\
+               & = 2 \int_{0}^{\infty} \frac{(x^2 + pq) \Diff x}{\sqrt{(x^2 + p^2) (x^2 + q^2) (x^2 + pq)^2}}                                                                                                                                          \\
+               & = 2 \int_{0}^{\infty} \frac{\Diff x}{\sqrt{(x^2 + p^2) (x^2 + q^2)}}                                                                                                                                                                  \\
+               & = 2 I(p, q),
+          \end{align*}
+          which means
+          \[
+              \int_{-\infty}^{\infty} \frac{\Diff t}{\sqrt{\left(\frac{1}{4} (p + q)^2 + t^2\right) \left(pq + t^2\right)}} = 2 I(p, q).
+          \]
+
+          But also note that the left-hand side satisfies that
+          \begin{align*}
+              \LHS & = \int_{-\infty}^{\infty} \frac{\Diff t}{\sqrt{\left(\frac{1}{4} (p + q)^2 + t^2\right) \left(pq + t^2\right)}}                    \\
+                   & = 2 \int_{0}^{\infty} \frac{\Diff t}{\sqrt{\left[\left(\frac{1}{2} (p + q)\right)^2 + t^2\right]\left[(\sqrt{pq})^2 + t^2\right]}} \\
+                   & = 2 \int_{0}^{\infty} \frac{\Diff t}{\sqrt{\left[a(p, q)^2 + t^2\right]\left[g(p, q)^2 + t^2\right]}}                              \\
+                   & = 2 I(a(p, q), g(p, q)),
+          \end{align*}
+          since the integrand is an even function, and so
+          \[
+              I(p, q) = I(a(p, q), g(p, q)),
+          \]
+          as desired.
+
+          Since \(0 < q < p\), let \(y_0 = q, x_0 = p\), and hence
+          \begin{align*}
+              I(p, q) & = I(x_0, y_0)                 \\
+                      & = I(a(x_0, y_0), g(x_0, y_0)) \\
+                      & = I(x_1, y_1)                 \\
+                      & = \cdots                      \\
+                      & = I(x_n, y_n).
+          \end{align*}
+
+          Let \(n \to \infty\), and we have
+          \begin{align*}
+              I(p, q) & = I(M, M)                                                               \\
+                      & = \int_{0}^{\infty} \frac{\Diff x}{M^2 + x^2}                           \\
+                      & = \frac{1}{M} \left[\arctan\left(\frac{x}{M}\right)\right]_{0}^{\infty} \\
+                      & = \frac{\pi}{2M}.
+          \end{align*}
+\end{enumerate}
